# -course-work-3

./: README.md  pyproject.toml
src/: main.py  operations.py  utils.py
tests/: test_main.py  test_operations.py  test_utils.py
